# azr

./: CLAUDE.md  INTELLIGENT_PAGING_TODO.md  README.md  index.html  mominokiwa_nokotta01.txt  package.json  pnpm-lock.yaml  sample.txt  sample_indent.txt  sample_pipe.txt  test_ruby_range.txt
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: App.tsx.html  index.html  main.tsx.html
coverage/src/core/: aozoraParser.ts.html  enhancedAozoraParser.ts.html  index.html  libraryStorage.ts.html  textFormatter.ts.html
coverage/src/test/: index.html  setup.ts.html
coverage/src/types/: aozora.ts.html  index.html  library.ts.html
coverage/src/utils/: fileHelpers.ts.html  (+1 more)
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: aozoraParser.test.ts  aozoraParser.ts  bookmarkStorage.test.ts  bookmarkStorage.ts  enhancedAozoraParser.test.ts  enhancedAozoraParser.ts  libraryStorage.integration.test.ts  libraryStorage.simple.test.ts  libraryStorage.test.ts  libraryStorage.ts  textFormatter.test.ts  textFormatter.ts  titleExtractor.test.ts
src/types/: aozora.ts  library.ts  window.d.ts
src/utils/: fileHelpers.ts  intelligentPageDivider.demo.test.ts  intelligentPageDivider.test.ts  intelligentPageDivider.ts  lineBreaker.test.ts  lineBreaker.ts  pageDivider.test.ts  pageDivider.ts  readerCapacityCalculator.test.ts  readerCapacityCalculator.ts  settingsStorage.test.ts  settingsStorage.ts  textUtils.test.ts  textUtils.ts  viewportTextCalculator.test.ts  viewportTextCalculator.ts
(+15 files in other folders)
