[package]
name = "azr"
version = "1.0.0"
description = "A Tauri App for reading Aozora Bunko formatted text files"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["fs-read-text-file", "fs-read-file"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lib]
name = "azr_lib"
crate-type = ["lib", "cdylib", "staticlib"]
